# Go-Tech_1-1_Anomaly_Detection

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .prettierignore  AGENTS.md  cspell.json  research_plan.md
LeadersBoard/: .env.example  README.md  README_user.md  coverage.json  design_doc.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-worker.txt  requirements.txt
LeadersBoard/demo/: config.yaml  main.py
LeadersBoard/demo_anomalib/: config.yaml  main.py
LeadersBoard/demo_anomalib2/: config.yaml  main.py  visualize.py
LeadersBoard/docker/: api.Dockerfile  streamlit.Dockerfile  worker.Dockerfile
LeadersBoard/docs/: api.md  deployment.md
LeadersBoard/nginx/: entrypoint.sh
LeadersBoard/nginx/auth/: htpasswd
LeadersBoard/nginx/conf.d/: default.conf
LeadersBoard/src/: __init__.py  config.py
LeadersBoard/src/adapters/: __init__.py  filesystem_storage_adapter.py  mlflow_tracking_adapter.py  redis_job_queue_adapter.py  redis_job_status_adapter.py  redis_rate_limit_adapter.py
LeadersBoard/src/anomalib/: __init__.py
LeadersBoard/src/api/: __init__.py  jobs.py  main.py  submissions.py  visualizations.py
LeadersBoard/src/domain/: add_submission_file.py  create_submission.py  enqueue_job.py  get_job_results.py  get_job_status.py  get_submission_files.py  get_visualization_artifacts.py
LeadersBoard/src/ports/: __init__.py  job_queue_port.py  job_status_port.py  rate_limit_port.py  storage_port.py  tracking_port.py
LeadersBoard/src/streamlit/: app.py
(+100 files in other folders)
